# matplotlib_cpp_experiments

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: fplot3_4.cpp  get_matplotlib_buffer_img.cpp  ibvs-4pts-plotter-continuous-gain-adaptive-plot2d.cpp  ibvs-4pts-plotter-continuous-gain-adaptive-plot3d.cpp  lines3d.cpp  subplot.cpp
